<resources>
    <string name="app_name">DegreeProjects</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_back">icon back</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="email">Correo institucional</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password"><u>Olvidé mi contraseña</u></string>
    <string name="create_account">Crear cuenta</string>
    <string name="create_account_message">¿No tienes cuenta?</string>
    <string name="register_title">Registro</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="account_recovery">Recuperar cuenta</string>
    <string name="account_recovery_message">Ingresa tu email para cambiar la contraseña</string>
    <string name="send">Enviar</string>
    <string name="check_email">Verificar correo institucional</string>
    <string name="check_email_message">Para completar su registro. ¡Por favor! verifique su correo institucional.</string>
    <string name="continuee">Continuar</string>
    <string name="update_password">Cambiar contraseña</string>
    <string name="update_password_message">Por motivos de seguridad debes ingresar tu contraseña actual.</string>
    <string name="delete">Eliminar</string>
    <string name="description_no_available">Descripción no disponible</string>
    <string name="register">Registro</string>
    <string name="fullname">Nombre completo</string>
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="update">Actualizar</string>
    <string name="document">Número de documento</string>
    <string name="phone">Número de teléfono</string>
    <string name="career">Carrera que cursa</string>
    <string name="logout">Cerrar sesión</string>
    <string name="without_info">Sin información</string>
    <string name="edition_mode">Modo edición</string>
    <string name="home">Inicio</string>
    <string name="projects">Proyectos</string>
    <string name="settings">Ajustes</string>
    <string name="profile">Perfil</string>
    <string name="save_data">Guardar datos</string>
    <string name="do_you_have_an_idea">¿Tienes una idea?</string>
    <string name="share_it">compártela…</string>
    <string name="project_name">Nombre del proyecto</string>
    <string name="create_project">Crear proyecto</string>
    <string name="description_project">Descripción del proyecto</string>
    <string name="tools">Herramientas y tecnologías</string>
    <string name="email_one">Correo electrónico estudiante 1</string>
    <string name="email_two">Correo electrónico estudiante 2</string>
    <string name="optional">Si vas a desarollar este proyecto ingresa el correo de los participantes</string>
    <string name="project_list">Lista de proyectos</string>
    <string name="responsibles">Responsables</string>
    <string name="project_details">Detalles del proyecto</string>
    <string name="take_proyect">Tomar proyecto</string>
    <string name="welcome">Bienvenido!!</string>
    <string name="degreeprojects_uts">DegreeProjects UTS</string>
    <string name="my_project">Mi proyecto</string>
    <string name="instalatinos">Instalaciones</string>
    <string name="contact">"Contacto: "</string>
    <string name="updateProject">Actualizar proyecto</string>
    <string name="no_project">No tienes ningún proyecto asignado</string>
</resources>